# PDF-to-MP3-GUI

./: Controller.py  PdfTab.py  PdfViewer.py  README.md  View.py  Widgets.py  pyproject.toml  requirements.txt
Project/: Constants.py  Controller.py  Model.py  PdfTab.py  PdfViewer.py  TextTab.py  View.py  Widgets.py
